Fixed Modal Spacing

--- a/src/Pages/Events/events.css
+++ b/src/Pages/Events/events.css
@@ -355,9 +355,9 @@ main {
   top: 50%;
   left: 50%;
   width: 70%;
-  /* height: 85vh; */
   height: fit-content;
   max-height: 85vh;
+  max-width: 1024px;
   background-color: white;
   border-radius: 1rem;
   outline: none;
@@ -390,8 +390,8 @@ main {
 .modal .event-content-container {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
-  padding: 2.5rem 4rem;
+  gap: 2.4rem;
+  padding: 4rem 6rem;
 }
 
 .event-content-header {
@@ -429,7 +429,7 @@ main {
 
 .event-register p {
   text-align: right;   
-  font-size: 1.2rem;
+  font-size: 1.3rem;
 }
 
 .event-register p:first-of-type {
@@ -442,7 +442,7 @@ main {
   color: white;
   font-weight: 300;
   font-family: inherit;
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   background-color: #4285F4;
   border: none;
   border-radius: 0.5rem;
@@ -465,8 +465,9 @@ main {
 
 .modal .event-content-info {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  column-gap: 2rem;
+  row-gap: 2.5rem;
 }
 
 .modal .event-content-info > div {
